--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 #container {
-    background: #ede9cc;
+    background: #ede9cc url(/img/bg-container.png) top center repeat-y;
     margin: 0 auto;
     min-width: 740px;
     max-width: 1180px;
@@ -119,4 +119,75 @@ ul#navegacao a:hover {
     width: 226px;
     height: 164px;
     float: right;
+}
+
+/* Area de contúdos*/
+
+#area-principal {
+    float: left;
+    width: 50%;
+    background: url(/img/bg-area-principal.png) top left repeat-x;
+    padding: 15px 0;
+}
+
+#area-lateral {
+    float: right;
+    width: 50%;
+    padding: 15px 0;
+    background: url(/img/bg-area-lateral.png) top left repeat-x;
+    padding: 20px 0;
+}
+
+.conteudo {
+    margin: 0 auto;
+    width: 90%;
+}
+
+#rodape {
+    clear: both;
+    padding: 16px;
+    background: #fff url(/img/bg-rodape.png) repeat-x top;
+    color: #7b7640;
+}
+
+/*Formatação de textos*/
+
+h2 {
+    color: #7b7640;
+    font-size: 1.1em;
+    padding: 5xp 0;
+}
+
+p {
+    font-size: 1em;
+    margin: 10px 0 10px 0;
+}
+
+/*Formatação da area lateral*/
+
+#beneficios li {
+    padding: 8px;
+    border-bottom: 1px solid #f3fbcf;
+    height: 6em;
+}
+
+#beneficios li a img {
+    float: left;
+    margin-right: 8px;
+}
+
+#beneficios li a  p{
+    color: #000;
+    font-size: 0.8em;
+}
+
+#beneficios li a h3 {
+    font-size: 1em;
+    color: #615b2b;
+    padding: 5px 0;
+    background: url(/img/ornamento.png) no-repeat center right;
+}
+#beneficios li:hover {
+    background: #f3f6d6;
+    cursor: pointer;
 }
